fix the text overflow

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -298,6 +298,7 @@ label {
 
 .text-ellipsis {
     text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 a.album-text {
